增加配置文件

--- a/ngrok.config
+++ b/ngrok.config
@@ -7,21 +7,21 @@
     "client": [
         {
             "protocol": "http",
-            "hostname": "file2",
+            "hostname": "www.xxx.com",
             "subdomain": "",
             "rport": 0,
             "lhost": "127.0.0.1",
             "lport": 80
         },
-		{
+        {
             "protocol": "http",
             "hostname": "",
-            "subdomain": "file2.qydev.com",
+            "subdomain": "xxx",
             "rport": 0,
             "lhost": "127.0.0.1",
             "lport": 80
-        }
-		        {
+        },
+        {
             "protocol": "tcp",
             "hostname": "",
             "subdomain": "",
