支持authtoken和隧道httpauth配置
authtoken和httpauth仅支持python-ngrok_deepseek.py版本2.3

--- a/ngrok.config
+++ b/ngrok.config
@@ -2,13 +2,15 @@
     "server": {
         "host": "tunnel.qydev.com",
         "port": 4443,
-        "bufsize": 1024
+        "bufsize": 1024,
+        "authtoken": ""
     },
     "client": [
         {
             "protocol": "http",
             "hostname": "www.xxx.com",
             "subdomain": "",
+            "httpauth": "",
             "rport": 0,
             "lhost": "127.0.0.1",
             "lport": 80
@@ -17,6 +19,7 @@
             "protocol": "http",
             "hostname": "",
             "subdomain": "xxx",
+            "httpauth": "",
             "rport": 0,
             "lhost": "127.0.0.1",
             "lport": 80
@@ -25,6 +28,7 @@
             "protocol": "tcp",
             "hostname": "",
             "subdomain": "",
+            "httpauth": "",
             "rport": 55499,
             "lhost": "127.0.0.1",
             "lport": 22
