支持authtoken和隧道httpauth配置及UDP隧道
authtoken和httpauth仅支持python-ngrok_deepseek.py版本2.0以上版本
UDP隧道仅支持python-ngrok_deepseek.py版本2.1以上版本

--- a/ngrok.config
+++ b/ngrok.config
@@ -32,6 +32,15 @@
             "rport": 55499,
             "lhost": "127.0.0.1",
             "lport": 22
+        },
+        {
+            "protocol": "udp",
+            "hostname": "",
+            "subdomain": "",
+            "httpauth": "",
+            "rport": 55499,
+            "lhost": "127.0.0.1",
+            "lport": 53
         }
     ]
 }
